metadata-retriever/metadata/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Dealer_Postal_Address_Country__c</fullName>
        <label>Postal Address Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Postal_Address_Post_Code__c</fullName>
        <label>Postal Address Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Postal_Address_State__c</fullName>
        <label>Postal Address State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Postal_Address_Suburb__c</fullName>
        <label>Postal Address Suburb</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Reason_for_Inactivation__c</fullName>
        <label>MB Reason for Inactivation</label>
        <picklist>
            <picklistValues>
                <fullName>The franchise was transferred.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchised business ceased to operate.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchise agreement was terminated by the franchisor:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchise agreement was terminated by the franchisee.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchise agreement was not renewed when it expired.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchised business was bought back by the franchisor.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchise agreement was terminated and the franchised business was acquired by the franchisor.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_SAP_MB_Trucks_Freightliner__c</fullName>
        <label>SAP MB Trucks/Freightliner</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_SPICS_II_Cars__c</fullName>
        <label>SPICS II Cars</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_SPICS_II_MB_Trucks_Freigthliner__c</fullName>
        <label>SPICS II MB Trucks/Freigthliner</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_SPICS_II_Vans__c</fullName>
        <label>SPICS II Vans</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Shareholders_Name__c</fullName>
        <label>Shareholders Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Shareholders_Percentage__c</fullName>
        <label>Shareholders Percentage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Street_Address_Address_Line_1__c</fullName>
        <label>Street Address Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Street_Address_Address_Line_2__c</fullName>
        <label>Street Address Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Street_Address_Country__c</fullName>
        <label>Street Address Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Street_Address_Post_Code__c</fullName>
        <label>Street Address Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Street_Address_State__c</fullName>
        <label>Street Address State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Street_Address_Suburb__c</fullName>
        <label>Street Address Suburb</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Trading_Hours_Parts__c</fullName>
        <label>Trading Hours Parts</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Trading_Hours_Service__c</fullName>
        <label>Trading Hours Service</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_Dlr_Class_Sales__c</fullName>
        <label>Trucks  Dlr Class Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provincial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_OES_Survey_Targets_Yearly__c</fullName>
        <label>Trucks OES Survey Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_PES_Target_Yearly__c</fullName>
        <label>Trucks PES Target - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_Sales_Region__c</fullName>
        <label>Trucks Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_Service_Region__c</fullName>
        <label>Trucks Service Region</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Vans_Dlr_Class__c</fullName>
        <label>Vans Dlr Class</label>
        <picklist>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provincial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Vans_OES_Survey_Targets_Yearly__c</fullName>
        <label>Vans OES Survey Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Vans_PES_Target_Yearly__c</fullName>
        <label>Vans PES Target - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Vans_Sales_Region__c</fullName>
        <label>Vans Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>Zone 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Vans_Service_Region__c</fullName>
        <label>Vans Service Region</label>
        <picklist>
            <picklistValues>
                <fullName>Zone 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Vehicle_Type__c</fullName>
        <label>Products</label>
        <picklist>
            <picklistValues>
                <fullName>MBV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unimog</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Warranty_Code__c</fullName>
        <label>Warranty Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Website__c</fullName>
        <label>Dealer Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_email__c</fullName>
        <label>Dealer email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>Concatenated information - Display Name. The field &quot;Display Name&quot; shall display the correct salutation,  probably used to address the customer correctly, as per definition:
a) if the surname of Customer and Partner is equal then &lt;Title Customer&gt; and &lt;Title Partner&gt; &lt;Surname Customer&gt; (e.g. Mr and Ms Jones)
b) If the surname  is unequal the &lt;Title Customer&gt;  &lt;First Name Surname Customer&gt; and &lt;Title Partner&gt;  &lt;First Name Surname Partner&gt;  (e.g. Mr Mark Jones and Ms Amie Davison)
c.) if no partner information available &lt;Customer Title&gt; &lt; First Name&gt; &lt;Surname&gt;</description>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Training__c</fullName>
        <description>Lifestyle Information
Are you interested in attending MB drive</description>
        <label>Are you interested in attending MB drive</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The education level of the person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_Education&quot;</description>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>Associate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Formal Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Last_Modified_By__c</fullName>
        <description>Contact Info Status 
- Opt In Email (BOOLEAN) (BOOLEAN) default unchecked (new field) 
- Last Modified By (STRING)</description>
        <label>Email Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Last_Modified_Date__c</fullName>
        <description>Contact Info Status 
- Opt In Email (BOOLEAN) (BOOLEAN) default unchecked (new field) 
- Last Modified By (STRING)</description>
        <label>Email Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <description>value will be delivered in general by external sources, but can be maintained manually as well</description>
        <label>Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>Bounce-Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FS_Email_Last_Modified_By__c</fullName>
        <label>FS Email Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Email_Last_Modified_Date__c</fullName>
        <label>FS Email Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Hardcopy_Last_Modified_By__c</fullName>
        <label>FS Mail Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Hardcopy_Last_Modified_Date__c</fullName>
        <label>FS Mail Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Opt_In_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FS Opt In Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Opt_In_Hardcopy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FS Opt In Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Opt_In_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FS Opt In Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Opt_In_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FS Opt In SMS/MMS/IM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Phone_Last_Modified_By__c</fullName>
        <label>FS Phone Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Phone_Last_Modified_Date__c</fullName>
        <label>FS Phone Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_SMS_Last_Modified_By__c</fullName>
        <label>FS SMS/MMS/IM Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_SMS_Last_Modified_Date__c</fullName>
        <label>FS SMS/MMS/IM Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FUSO_Dealer_Code__c</fullName>
        <label>FUSO Dealer Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Area_Code__c</fullName>
        <label>Fax Area Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Category__c</fullName>
        <label>Fleet Category</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business - Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstrator - Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstrator - MBAuP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Local - F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Local - M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium / Small Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBC Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprinter Body Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fleet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fuso_Offered_Service__c</fullName>
        <label>Fuso Offered Service</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GSSN_Brand_Code_Sub_B__c</fullName>
        <label>GSSN Brand Code Sub &quot;B&quot;</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSN_Brand_Code_Sub_C_D__c</fullName>
        <label>GSSN Brand Code Sub &quot;C&quot;/ &quot;D&quot;</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSN_Brand_Main_Code__c</fullName>
        <label>GSSN Brand Main Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Gender of the person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_Gender&quot;</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Golf_Handicap__c</fullName>
        <label>Golf Handicap</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardcopy_Last_Modified_By__c</fullName>
        <description>The fields &quot;Last Updated By&quot; and &quot;Last Updated Date&quot; for each OptIn option are to be read only. They will be updated either via interface data load or the system will set the date and the user name into respective fields. The user name will be not be a lookup onto a really existing user as done for similar fields.</description>
        <label>Mail Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardcopy_Last_Modified_Date__c</fullName>
        <description>The fields &quot;Last Updated By&quot; and &quot;Last Updated Date&quot; for each OptIn option are to be read only. They will be updated either via interface data load or the system will set the date and the user name into respective fields. The user name will be not be a lookup onto a really existing user as done for similar fields.</description>
        <label>Mail Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>How_Many_People_In_Your_Household__c</fullName>
        <label>How Many People In Your Household?</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_old_are_they__c</fullName>
        <label>How old are they?</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inactivation_Date__c</fullName>
        <label>MB Inactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <description>Lifestyle Information
Income</description>
        <label>Income</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;$60,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$60,000 - $89,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$90,000 - $119,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$120,000 - $159,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$160,000 - $199,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$200,000 - $349,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$350,000 - $499,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Home_Phone_Area_Code__c</fullName>
        <description>Individual Home Phone Area Code</description>
        <label>Home Phone Area Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Home_Phone_Status__c</fullName>
        <description>Individual home phone status</description>
        <label>Home Phone Status</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Home_Phone__c</fullName>
        <description>Individual Home Phone</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cricket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawn Bowls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rugby Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surfing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walking</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Job Title</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDCL_Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Customer ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Update_Changed_By__c</fullName>
        <label>Last Update Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_updated__c</fullName>
        <label>Last updated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Survey_Date__c</fullName>
        <label>Life Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MBFS_Activation_Date__c</fullName>
        <label>MBFS Activation Date</label>
        <type>Date</type>
    </fields>
</CustomObject>